--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,6 @@ description: >
   A more expressive way to return error or success values via the type system
 author: Joseph Moniz <joseph.moniz@gmail.com>
 dependencies:
-  option: '1.0.0'
+  option: ">=1.0.0 <2.0.0"
 dev_dependencies:
   unittest: 0.4.7+1
